# hmusic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  beats.mid  beats.txt  chrom.txt  chrom2.mid  chrom2.txt  drumComments.txt  drums.txt  europa.mid  europa.txt  europa2.txt  fiveCol.txt  fourCol.txt  hmusic  hmusic.cabal  hnotes.txt  impro2.txt  lchrom.txt  lnotes.txt  mala#.txt  mala.txt  mala1.txt  mala2.txt  maman.txt  multichannels.txt  mymusic.mid  mymusic.txt  notes.txt  oneCol.txt  pierrot.txt  ref.mid  state.hs  sxteenCol.txt  threeCol.txt  tututi.txt  tututu.txt  twoCol.txt
src/: .Main.hs.swp  Bach.hs  Main.hs
src/Data/: Music.hs
src/Data/Amp/: Diag.hs  Hylo.hs
src/Data/Amp/Math/: Primes.hs  StreamPrimes.hs
src/Data/Amp/Music/Midi/: Midi.hs
src/Data/Amp/Text/: Sep.hs  Table.hs
src/Data/Ampli/: Ampli.hs  Hylo.hs
src/Data/Ampli/Text/: Sep.hs
src/Data/Internal/: TestSuite.hs
src/Data/Music/: Music.hs
