cabal-version:       2.4
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                hmusic
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Jean-Pierre Delouche
maintainer:          jdelouche@wanadoo.fr
-- copyright:
category:            Sound
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git 
  location: https://github.com/jdelouche/hmusic.git

library
  exposed-modules:   Data.Music
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0,
                       HCodecs
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hmusic
  main-is:             Main.hs
  other-modules:       Data.Music,
                       Bach
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0,
                       HCodecs,
                       split,
                       listsafe
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
   type: exitcode-stdio-1.0
   hs-source-dirs: src
   ghc-options: -O3 -Wall
   other-modules:       Data.Music
   build-depends:
       HCodecs
     , base < 5
     , bytestring
     , random
     , semigroups
     , array >= 0.4
     , QuickCheck >= 2.0
 
   main-is: Data/Internal/TestSuite.hs
