cabal-version:       2.4
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                hmusic
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Jean-Pierre Delouche
maintainer:          jdelouche@wanadoo.fr
-- copyright:
category:            Sound
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git 
  location: https://github.com/jdelouche/hmusic.git

library
  exposed-modules:   Data.Music.Music, Data.Ampli.Hylo, Data.Ampli.Ampli
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11.0.0,
                       HCodecs
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hmusic
  main-is:             Main.hs
  other-modules:       Data.Music.Music,Data.Ampli.Hylo,Data.Ampli.Ampli
  -- other-extensions:
  build-depends:       base >=4.11.0.0,
                       HCodecs,
                       split,
                       listsafe,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
