cabal-version:       2.4
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                hmusic
version:             0.1.0.1
synopsis:            Write a text a file and get a midi file
description:         txt music file parser to midii, written with hylomorphism
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Jean-Pierre Delouche
maintainer:          jdelouche@wanadoo.fr
copyright:           Jean-Pierre Delouche
category:            Sound
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git 
  location: https://github.com/jdelouche/hmusic.git

library
  exposed-modules:     Data.Amp.Music.Midi.Midi, Data.Amp.Hylo, Data.Amp.Text.Sep,Data.Amp.Text.Table
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11.0.0,
                       HCodecs
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hmusic
  main-is:             Main.hs
  other-modules:       Data.Amp.Music.Midi.Midi,Data.Amp.Hylo,Data.Amp.Text.Sep,Data.Amp.Text.Table
  -- other-extensions:
  build-depends:       base >=4.11.0.0,
                       HCodecs,
                       split,
                       listsafe,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
